-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.15
--------------

 * translation of F, H, E and G polynomial spice sources
 * many new digital primitives in Verilog-A
 * allowing variables in constant parameter simulation boxes
 * existing HICUM models can now be converter by the qucsconv command
   line tool into library elements
 * allowing property references inside the same	instance of a component
 * new components: rectangular waveguide, digital buffer, microstrip
   radial stub, RLCG transmission line
 * added noise figure property to amplifier model
 * new Verilog-A device models: EPFL-EKV NMOS/PMOS V2.6, HICUM L0 v1.2,
   HICUM L2 v2.23, photodiode, phototransistor

Version 0.0.14
--------------

 * implementation of multi- and 2-port equation defined RF device
 * new Verilog-A device models: Logarithmic Amplifier, HICUM L0 v1.12,
   Potentiometer, MESFET (Curtice, Statz, TOM-1 and TOM-2)
 * added 3- and more argument versions of PlotVs()
 * new non-linear components: diac, triac, thyristor

Version 0.0.13
--------------

 * new Verilog-A device models: Modular OpAmp and HICUM L2 v2.22
 * allowing immediate vectors and matrices in equations
 * new functions in equation solver: random(), srandom(), StabFactor()
   and StabMeasure()
 * allowing engineering notation of numbers in equations
 * support for Touchstone files as an export file format in qucsconv
 * support for CSV files as an import file format in qucsconv
 * new components: file based voltage and current sources

Version 0.0.12
--------------

 * added vt(), hypot() and limexp() to the available functions
 * new logical and rational operators in equation solver as well as
   the ternary ?: construct